# sc2_timings

./: .gitignore  API.md  CHANGELOG.md  DEPLOY.md  Makefile  README.md  TODO.md  build_static.py  debug_static.js  debug_tiered_upgrades.py  fix_icon_hrefs.py  fix_level_hrefs.py  fix_upgrade_images.py  pyproject.toml  run_comprehensive_scraper.py  simple_build.py  terran_buildings_data.json  test_build.py  test_current_extraction.py  test_static.html  test_tiered_upgrades.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml
src/sc2_gantt/: __init__.py  __main__.py  test.py  web_app.py
src/sc2_gantt/assets/: __init__.py  sc2_comprehensive_data.json
src/sc2_gantt/backend/: __init__.py  gantt_chart.py  web_app.py
src/sc2_gantt/backend/sc2_data/: __init__.py  __main__.py  comprehensive_scraper.py
src/sc2_gantt/frontend/: __init__.py
src/sc2_gantt/frontend/css/: gantt.css
src/sc2_gantt/frontend/js/: gantt.js
src/sc2_gantt/frontend/templates/: index.html  static_index.html
src/sc2_gantt/sc2_data/: __main__.py  scraper.py
src/sc2_gantt/static/: sc2_comprehensive_data.json
src/sc2_gantt/static/css/: gantt.css
src/sc2_gantt/static/js/: gantt.js
tests/: __init__.py  test_sc2_gantt.py  test_scrapers.py
