[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sc2_gantt"
version = "0.1.0"
description = "Gantt charts for SC2"
readme = "README.rst"
authors = [
  {name = "Louis Groux", email = "louis.cal.groux@example.com"}
]
maintainers = [
  {name = "Louis Groux", email = "louis.cal.groux@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "flask>=2.0",
  "requests>=2.25.0",
  "beautifulsoup4>=4.9.0",
  "pillow>=8.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Calomnie/sc2_gantt/issues"
changelog = "https://github.com/Calomnie/sc2_gantt/blob/master/changelog.md"
homepage = "https://github.com/Calomnie/sc2_gantt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


[project.scripts]
sc2_gantt = "sc2_gantt.__main__:main"
sc2_gantt_web = "sc2_gantt.web_app:run_app"
sc2_data = "sc2_gantt.backend.sc2_data.__main__:main"



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

